--- a/WebContent/crm/target_entry_list_edit.html
+++ b/WebContent/crm/target_entry_list_edit.html
@@ -66,8 +66,8 @@
 	var datas = [];
 	$(function(){
 		$("#id").val(id);
-        initalldept();
-        initallchannel();
+//        initalldept();
+//        initallchannel();s
 		initcurruser();
 		getEditInfo();
         searchList();
@@ -349,7 +349,7 @@
 					<p class="read">月份：<input name="frame_time" id="frame_time" readonly style="width: 38%;color: #333333;border: 0;"></p>
 				</td>
 				<td>
-					<p class="read">事业群名称：<input name="businessGroup_name" id="businessGroup_name" readonly style="width: 38%;color: #333333;border: 0;"></input></p>
+					<p class="read">事业群名称：<input name="businessGroup_name" id="businessGroup_name" readonly style="width: 38%;color: #333333;border: 0;"></p>
 				</td>
 				<td>
 					<p class="read">频道名称：<input name="channel_name" id="channel_name" readonly style="width: 38%;color: #333333;border: 0;"></p>
