--- a/WebContent/crm/target_entry_view.html
+++ b/WebContent/crm/target_entry_view.html
@@ -86,6 +86,12 @@ $(function () {
 function searchList() {
     $$.executeSearch('targetEntry', 'conditionsDiv');
     $(".operateHeader").width("5%");
+    $("#maori_target").val("");
+    $("#profit_target").val("");
+    $("#user_target").val("");
+    $("#frame_time").val("");
+    $("#deptSelect").val("");
+    $("#channelSelect").val("");
 }
 function doClean() {
     document.service_qa.reset();
@@ -414,11 +420,11 @@ function initChannelSelectcomplate(){
                       displaynumber="7">
                     <table id="searchTable" cellpadding="0" cellspacing="0" style="min-width: 100%; width: auto">
                         <tr>
-                            <td width="7%">月份:</td>
+                            <td width="4%">月份:</td>
                             <td>
                                 <input id="fromTime" name="fromTime" type="text" style="width:60%" readonly class="form-control"/>
                             </td>
-                            <td width="7%">事业群名称:</td>
+                            <td width="8%">事业群名称:</td>
                             <td>
                                 <input id="businessGroupName" name="businessGroupName" type="text" style="width:60%" class="form-control"/>
                             </td>
