--- a/WebContent/crm/target_entry_list_edit.html
+++ b/WebContent/crm/target_entry_list_edit.html
@@ -314,12 +314,13 @@
 </style>
 <body>
 	<div class="panel panel-primary" style="margin: 10px 5px 0 5px">
-    <div class="panel-heading" style="height: 65px">频道总体目标值
+    <div class="panel-heading" style="height: 75px">频道总体目标值
 		<div style="margin-top: -18px">
-			<span style="position: absolute;left: 200px;color: #ee2626;margin-right: 30%">提示：1、请先导出数据在导入数据。</span><br>
-			<span style="position: absolute;left: 240px;color: #ee2626;margin-right: 30%">2、请确保填写门店各指标总和等于频道指标。</span>
+			<span style="position: absolute;left: 200px;color: #ee2626;margin-right: 30%">提示：1、请先导出数据再导入数据。</span><br>
+			<span style="position: absolute;left: 240px;color: #ee2626;margin-right: 30%">2、请确保填写门店各指标总和等于频道指标。</span><br>
+			<span style="position: absolute;left: 240px;color: #ee2626;margin-right: 30%">3、请确认导入数据的月份、事业群、频道与页面相同。</span>
 		</div>
-		<span class="but" style="position: relative;top: -18px;">
+		<span class="but" style="position: relative;top: -35px;">
 			<button name="file" style="height: 38px" class="btn btn-outline btn-default" id="file" onclick="showFile()">导入数据</button>
 			<button name="download" style="height: 38px" class="btn btn-outline btn-default" onclick="download();">导出数据</button>
             </span>
