添加总部 频道负责人角色组；取得当前登录人的事业群 频道信息

--- a/WebContent/hr/reg_online_human_list.html
+++ b/WebContent/hr/reg_online_human_list.html
@@ -326,6 +326,7 @@
                            		<option>请选择..</option>
                            		<option value="ZBYYGLBZ">总部-运营管理部</option>
                            		<option value="ZBCPGLB">总部-产品管理部</option>
+                           		<option value="ZBPDFZRJSZ">总部-频道负责人角色组</option>
                            	</select>
                         </td>
                 	</tr>
