门店毛利显示统一保留2位小数

--- a/WebContent/crm/dynamicData_storeprofit_analysis.html
+++ b/WebContent/crm/dynamicData_storeprofit_analysis.html
@@ -494,12 +494,12 @@ laydate.render({//月份控件
 		                       +"<td>"+jData[i].city_name+"</td>"
 		                       +"<td>"+jData[i].store_name+"</td>"
 		                       +"<td>"+jData[i].store_code+"</td>"
-		                       +"<td>"+jData[i].platform_profit+"</td>"
-                               +"<td>"+jData[i].ims_profit+"</td>"
-                               +"<td>"+jData[i].return_profit+"</td>"
-                               +"<td>"+jData[i].order_fee+"</td>"
-                               +"<td>"+jData[i].baosun+"</td>"
-                               +"<td>"+jData[i].pankui+"</td>"
+		                       +"<td>"+(jData[i].platform_profit).toFixed(2)+"</td>"
+                               +"<td>"+(jData[i].ims_profit).toFixed(2)+"</td>"
+                               +"<td>"+(jData[i].return_profit).toFixed(2)+"</td>"
+                               +"<td>"+(jData[i].order_fee).toFixed(2)+"</td>"
+                               +"<td>"+(jData[i].baosun).toFixed(2)+"</td>"
+                               +"<td>"+(jData[i].pankui).toFixed(2)+"</td>"
                                +"<td>"+real_profit+"</td>"
 		                       +"</tr>";
 		                       
