事业群用户页面初始化城市选项不可录入，不影响发版

--- a/WebContent/crm/dynamicData_department_consumer.html
+++ b/WebContent/crm/dynamicData_department_consumer.html
@@ -171,7 +171,7 @@
                 <label for="cityClick"></label>
                 </span></label>
 			  <input id="city_id_tradetype" name="city_id_tradetype" type="hidden" value=""/>
-			  <input type="text" class="form-control"  placeholder="城市" id="city_name_tradetype" style="display: inherit;width: 90%;border-radius: 6px; box-shadow: 0 1px 1px rgba(0,0,0,0.3)"/>
+			  <input type="text" class="form-control"  placeholder="城市" id="city_name_tradetype" style="display: inherit;width: 90%;border-radius: 6px; box-shadow: 0 1px 1px rgba(0,0,0,0.3)" disabled="true"/>
               <div class="auto hidden" id="auto_city" style="width:82%;z-index: 99999;">
               <!-- /.input group -->
               </div>
@@ -182,7 +182,7 @@
                 <label for="storeClick"></label>
                 </span></label>
 			  <input id="store_id_tradetype" name="store_id_tradetype" type="hidden" value=""/>
-			  <input type="text" class="form-control"  placeholder="门店" id="store_name_tradetype" style="border-radius: 6px; box-shadow: 0 1px 1px rgba(0,0,0,0.3);width: 90%""/>
+			  <input type="text" class="form-control"  placeholder="门店" id="store_name_tradetype" style="border-radius: 6px; box-shadow: 0 1px 1px rgba(0,0,0,0.3);width: 90%" disabled="true"/>
               <div class="auto hidden" id="auto_store" style="width:82%;z-index: 99999;">
               </div>
               <!-- /.input group -->
