--- a/WebContent/crm/dynamicData_gax_analysis.html
+++ b/WebContent/crm/dynamicData_gax_analysis.html
@@ -137,7 +137,7 @@
                     <div class="box-header h4 text-light-blue">
                         <div class="pull-left "><strong>国安侠毛利</strong></div>
                         <div class="pull-left text-red" style="padding-left:15px;font-size:75%">数据口径：</div>
-                        <div class="pull-left text-red" style="font-size:75%">1.销售收入=片区销售收入+手动匹配营销收入+人均匹配营销收入</br>2.片区销售收入：当月所有指定国安侠的有效订单收入（去除退货）</br>3.手动匹配营销收入：当月所有手动分配的有效订单收入（去除退货）</br>4.人均匹配营销收入：当月门店内现场扫码类订单收入均值</br>5.片区营销费用：指定国安侠类订单内平台分摊使用的优惠券</br>6.手动匹配营销费用：手动匹配类订单内平台分摊使用的优惠券</br>7.毛利=片区销售收入+手动分配销售收入+人均分配销售收入-片区营销费用-手动分配营销费用-报损-盘亏。</div>
+                        <div class="pull-left text-red" style="font-size:75%">1.销售收入=片区销售收入+手动匹配营销收入+人均匹配营销收入</br>2.片区销售收入：当月所有指定国安侠的有效订单收入（去除退货）</br>3.手动匹配营销收入：当月所有手动分配的有效订单收入（去除退货）</br>4.人均匹配营销收入：当月门店内现场扫码类订单收入均值</br>5.片区营销费用：指定国安侠类订单内平台分摊使用的优惠券</br>6.手动匹配营销费用：手动匹配类订单内平台分摊使用的优惠券</br>7.毛利=片区销售收入+手动分配销售收入+人均分配销售收入-片区营销费用-手动分配营销费用-报损盘亏。</div>
                     </div>
                     <div class="box-body">
                         <div class="form-group col-lg-4">
@@ -222,10 +222,9 @@
                                             <th width="8%" style="font-size: 14px;font-weight:bold;" id="handin">手动分配销售收入<br/></th>
                                             <th width="8%" style="font-size: 14px;font-weight:bold;" id="avgin">人均分配销售收入<br/></th>
                                             <th width="8%" style="font-size: 14px;font-weight:bold;" >营销费用<br/></th>
-                                            <th width="6%" style="font-size: 14px;font-weight:bold;">报损<br/></th>
-                                            <th width="6%" style="font-size: 14px;font-weight:bold;">盘亏<br/></th>
+                                            <th width="6%" style="font-size: 14px;font-weight:bold;">报损盘亏<br/></th>
                                             <th width="10%" style="font-size: 14px;font-weight:bold;"><font id="columnattention1" style="color:#337ab7;font-size:14px;font-weight:normal;">！</font>
-                                                <font id="forcolumnattention1" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:17px">销售收入-营销费用-报损-盘亏</font>毛利</th>
+                                                <font id="forcolumnattention1" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:17px">销售收入-营销费用-报损盘亏</font>毛利</th>
                                         </tr>
                                         </tbody>
                                     </table>
@@ -589,7 +588,7 @@
                                 +"<td style='font-size: 14px;font-weight: normal;display: none'>0</td>"
                                 +"<td style='font-size: 14px;font-weight: normal;'>"+jData[i].sumprice+"</td>"
                                 +"<td style='font-size: 14px;font-weight: normal;'>"+jData[i].baosun+"</td>"
-                                +"<td style='font-size: 14px;font-weight: normal;'>"+jData[i].pankui+"</td>"
+                               /* +"<td style='font-size: 14px;font-weight: normal;'>"+jData[i].pankui+"</td>"*/
                                 +"<td style='font-size: 14px;font-weight: normal;'>"+jData[i].maoli+"</td>"
                                 +"</tr>";
 
@@ -606,7 +605,7 @@
                                 +"<td style='font-size: 14px;font-weight: normal;'>"+jData[i].wcd_profit+"</td>"
                                 +"<td style='font-size: 14px;font-weight: normal;'>"+jData[i].sumprice+"</td>"
                                 +"<td style='font-size: 14px;font-weight: normal;'>"+jData[i].baosun+"</td>"
-                                +"<td style='font-size: 14px;font-weight: normal;'>"+jData[i].pankui+"</td>"
+                               /* +"<td style='font-size: 14px;font-weight: normal;'>"+jData[i].pankui+"</td>"*/
                                 +"<td style='font-size: 14px;font-weight: normal;'>"+jData[i].maoli+"</td>"
                                 +"</tr>";
 
