修复用户运营门店复选框

--- a/WebContent/crm/dynamicData_deptprofit_analysis.html
+++ b/WebContent/crm/dynamicData_deptprofit_analysis.html
@@ -133,7 +133,7 @@
  			  <input type="text" class="form-control" id="be_date1" name="be_date1" readonly="readonly" style="cursor:pointer;background-color:#ffffff"></input>
             </div>
             <div class="form-group col-lg-4">
-              <label><span class="text-red" title="勾选频道：以城市为单位统计&#13;未勾选城市：以其它数据项为单位统计" style="padding-left: 0px; font-size: 14px; font-weight: bold; cursor: pointer">！</span>城市<span class="checkboxFive">
+              <label><span class="text-red" title="勾选城市：以城市为单位统计&#13;未勾选城市：以其它数据项为单位统计" style="padding-left: 0px; font-size: 14px; font-weight: bold; cursor: pointer">！</span>城市<span class="checkboxFive">
                 <input type='checkbox' id="cityClick" onclick='operatedCoverageCity()' checked="checked" value='city'>
                 <label for="cityClick"></label>
                 </span></label>
@@ -143,7 +143,7 @@
               </div>
             </div>
             <div class="form-group col-lg-4">
-              <label><span class="text-red" title="勾选频道：以门店为单位统计&#13;未勾选门店：以其它数据项为单位统计" style="padding-left: 0px; font-size: 14px; font-weight: bold; cursor: pointer">！</span>门店<span class="checkboxFive">
+              <label><span class="text-red" title="勾选门店：以门店为单位统计&#13;未勾选门店：以其它数据项为单位统计" style="padding-left: 0px; font-size: 14px; font-weight: bold; cursor: pointer">！</span>门店<span class="checkboxFive">
                 <input type='checkbox' id="storeClick" onclick='operatedCoverageStore()' checked="checked" value='store'>
                 <label for="storeClick"></label>
                 </span></label>
