毛利统计（运营）

--- a/WebContent/crm/current_shopkeeper.html
+++ b/WebContent/crm/current_shopkeeper.html
@@ -179,6 +179,8 @@
                                             <dd><a href="javascript:goToUserOperationStat()"><span class="fa fa-user-plus"></span>用户运营</a></dd>
                                             <dd class="logo-prohibit"><a href="javascript:js_alert()"><span class="fa fa-comments-o"></span>混片情况</a></dd>
                                             <dd><a href="javascript:goToUserMember()"><span class="fa fa-rocket"></span>合作社社员统计</a>
+                                            <dd style="position:relative"><a href="javascript:goToProfitStat()"><span class="fa fa-gg"></span>毛利统计（运营）</a>
+                                                <img alt="" src="dist/img/beta.png" style="position:absolute; top:5px; width:40px; height:19px;"></dd>
                                         </dl>
                                         <dl class="pull-left">
                                             <dt style="text-align:center"><i></i>绩效数据</dt>
@@ -1816,6 +1818,11 @@
     //国安侠毛利
     function goToGaxMaoli() {
         var url = "dynamicData_gax_analysis.html?t="+encode64(2)+"&c=&cn="+encode64(currentStore.cityName)+"&s="+ encode64(STORE_ID)+"&so="+encode64(currentStore.storeno)+"&e="+encode64(EMPLOYEE_NO)+"&sn="+encode64(currentStore.name)+"&#fg";
+        window.open(url,"_blank");
+    }
+    //毛利统计
+    function goToProfitStat(){
+        var url = "dynamicData_profit_analysis.html?t="+encode64(2)+"&c=&cn="+encode64(currentStore.cityName)+"&s="+ encode64(STORE_ID)+"&so="+encode64(currentStore.storeno)+"&e="+encode64(EMPLOYEE_NO)+"&sn="+encode64(currentStore.name)+"&#fg";
         window.open(url,"_blank");
     }
     //送单量
