修改目标值页面显示

--- a/WebContent/crm/target_entry_list_edit.html
+++ b/WebContent/crm/target_entry_list_edit.html
@@ -326,7 +326,7 @@
 </style>
 <body>
 	<div class="panel panel-primary" style="margin: 10px 5px 0 5px">
-    <div class="panel-heading" style="height: 75px">频道总体目标值
+    <div class="panel-heading" style="height: 75px">总体目标值
 		<div style="margin-top: -18px">
 			<span style="position: absolute;left: 200px;color: #eee826;margin-right: 30%">使用说明：1、请先导出数据再导入数据。</span><br>
 			<span style="position: absolute;left: 270px;color: #eee826;margin-right: 30%">2、请确保填写门店各指标总和等于事业群指标。</span><br>
