--- a/WebContent/crm/target_entry_view.html
+++ b/WebContent/crm/target_entry_view.html
@@ -404,7 +404,7 @@ function initChannelSelectcomplate(){
 	<div class="panel panel-default" style="margin: 10px">
 	    <div class="panel-heading">
 	        <h4 class="panel-title">
-	           频道录入信息:
+	           录入信息:
 	        </h4>
 	    </div>
 	</div>
