修改目标值事业群选项

--- a/WebContent/crm/target_entry_view.html
+++ b/WebContent/crm/target_entry_view.html
@@ -43,8 +43,8 @@ var win;
 var code = "";
 $(function () {
 	//获取当前登录的用户t
-    initalldept();
-    initallchannel();
+//    initalldept();
+//    initallchannel();
 	 doManager("targetEntryManager", "getUserInfo", null, function(
 							data, textStatus, XMLHttpRequest) {
 						if (data.result) {
@@ -60,13 +60,13 @@ $(function () {
                                 }else {
                                     $("#deptSelect").css("display","none");
                                     $("#businessGroup_name").css("display","block");
-                                    $("#businessGroup_name").val(jsonData.data.careergroup);
-                                    $("#businessGroup_code").val(jsonData.data.careergroup_id);
+//                                    $("#businessGroup_name").val(jsonData.data.careergroup);
+//                                    $("#businessGroup_code").val(jsonData.data.careergroup_id);
 
                                     $("#channelSelect").css("display","none");
                                     $("#channel_name").css("display","block");
-                                    $("#channel_name").val(jsonData.data.channelname);
-                                    $("#channel_code").val(jsonData.data.channel_id);
+//                                    $("#channel_name").val(jsonData.data.channelname);
+//                                    $("#channel_code").val(jsonData.data.channel_id);
                                 }
 							}
 						} else {
@@ -292,54 +292,54 @@ function doSave(newWindow){
 
 var storeJson;
 
-var array_channel=new Array();
-//初始化所有频道
-function initallchannel() {
-    doManager("chartStatManager", "queryAllChannel", null,
-        function(data, textStatus, XMLHttpRequest) {
-            if (data.result) {
-                var jsonData = $.fromJSON(data.data);
-                array_channel = new Array();
-                var storeString = "";
-                for(i=0;i<jsonData.length;i++){
-                    array_channel.push(jsonData[i].name);
-                    if(i == 0){
-                        storeString = "{'"+jsonData[i].name+"'"+":"+"'"+jsonData[i].id+"'"+",";
-                    }else if(i == jsonData.length-1){
-                        storeString = storeString+"'"+jsonData[i].name+"'"+":"+"'"+jsonData[i].id+"'"+"}";
-                    }else{
-                        storeString = storeString+"'"+jsonData[i].name+"'"+":"+"'"+jsonData[i].id+"'"+",";
-                    }
-                }
-                storeJson=$.fromJSON(storeString);
-                $("#channelSelect").append("<option value=''>全部频道</option>");
-                $(jsonData).each(function(index,element){
-                    $("#channelSelect").append('<option value="'+element.id+'">'+element.name+'</option>');
-                    if(index == 0){
-                        $("#channel_code").val(element.id);
-                        $("#channel_name").val(element.name);
-                    }
-                });
-            }
-        }, false);
-}
+//var array_channel=new Array();
+////初始化所有频道
+//function initallchannel() {
+//    doManager("chartStatManager", "queryAllChannel", null,
+//        function(data, textStatus, XMLHttpRequest) {
+//            if (data.result) {
+//                var jsonData = $.fromJSON(data.data);
+//                array_channel = new Array();
+//                var storeString = "";
+//                for(i=0;i<jsonData.length;i++){
+//                    array_channel.push(jsonData[i].name);
+//                    if(i == 0){
+//                        storeString = "{'"+jsonData[i].name+"'"+":"+"'"+jsonData[i].id+"'"+",";
+//                    }else if(i == jsonData.length-1){
+//                        storeString = storeString+"'"+jsonData[i].name+"'"+":"+"'"+jsonData[i].id+"'"+"}";
+//                    }else{
+//                        storeString = storeString+"'"+jsonData[i].name+"'"+":"+"'"+jsonData[i].id+"'"+",";
+//                    }
+//                }
+//                storeJson=$.fromJSON(storeString);
+//                $("#channelSelect").append("<option value=''>全部频道</option>");
+//                $(jsonData).each(function(index,element){
+//                    $("#channelSelect").append('<option value="'+element.id+'">'+element.name+'</option>');
+//                    if(index == 0){
+//                        $("#channel_code").val(element.id);
+//                        $("#channel_name").val(element.name);
+//                    }
+//                });
+//            }
+//        }, false);
+//}
 
-function initalldept(){
-    doManager("chartStatManager","queryAllDept",null,
-        function(data,textStatus,XmlHttpRequest){
-            if (data.result) {
-                var jsonData = $.fromJSON(data.data);
-                $("#deptSelect").append("<option value=''>全部事业群</option>");
-                $(jsonData).each(function(index,element){
-                    $("#deptSelect").append('<option value="'+element.id+'">'+element.name+'</option>');
-                    if(index == 0){
-                        $("#businessGroup_code").val(element.id);
-                        $("#businessGroup_name").val(element.name);
-                    }
-                });
-            }
-        });
-}
+//function initalldept(){
+//    doManager("chartStatManager","queryAllDept",null,
+//        function(data,textStatus,XmlHttpRequest){
+//            if (data.result) {
+//                var jsonData = $.fromJSON(data.data);
+//                $("#deptSelect").append("<option value=''>全部事业群</option>");
+//                $(jsonData).each(function(index,element){
+//                    $("#deptSelect").append('<option value="'+element.id+'">'+element.name+'</option>');
+//                    if(index == 0){
+//                        $("#businessGroup_code").val(element.id);
+//                        $("#businessGroup_name").val(element.name);
+//                    }
+//                });
+//            }
+//        });
+//}
 
 
 function showDept() {
@@ -350,53 +350,53 @@ function showDept() {
     $("#businessGroup_code").val(businessGroupno);
     initChannelSelectcomplate();
 }
-
-function showChannel() {
-    var channel_code = $("#channelSelect").val();
-    var index=$("#channelSelect")[0].selectedIndex ;
-    var channel_name = $("#channelSelect")[0].options[index].text;
-    $("#channel_code").val(channel_code);
-    $("#channel_name").val(channel_name);
-}
-
-
-var storeJsonChannel;
-function initChannelSelectcomplate(){
-    var deptSelect = $("#deptSelect  option:selected").val();
-    $("#channelSelect").empty();
-    if(deptSelect==""){
-        initallchannel();
-    }else{
-        //根据事业群查询频道信息
-        var deptId = "'"+deptSelect+"'";
-        doManager("chartStatManager","findChannelByDept",[deptId],
-            function(data,textStatus,XmlHttpRequest){
-                if (data.result) {
-                    var jsonData = $.fromJSON(data.data);
-                    array_channel=new Array();
-                    var storeString = "";
-                    $(jsonData).each(function(index,element){
-                        var channelName = element.name;
-                        var id = element.id;
-                        array_channel.push(channelName);
-                        if(index == 0){
-                            storeString = "{'"+channelName+"'"+":"+"'"+id+"'"+",";
-                        }else if(index == jsonData.length-1){
-                            storeString = storeString+"'"+channelName+"'"+":"+"'"+id+"'"+"}";
-                        }else{
-                            storeString = storeString+"'"+channelName+"'"+":"+"'"+id+"'"+",";
-                        }
-                    });
-                    storeJsonChannel=$.fromJSON(storeString);
-                    $("#channelSelect").append("<option value=''>全部频道</option>");
-                    $(jsonData).each(function(index,element){
-                        $("#channelSelect").append('<option value="'+element.id+'">'+element.name+'</option>');
-                    });
-                }
-            });
-    }
-
-}
+//
+//function showChannel() {
+//    var channel_code = $("#channelSelect").val();
+//    var index=$("#channelSelect")[0].selectedIndex ;
+//    var channel_name = $("#channelSelect")[0].options[index].text;
+//    $("#channel_code").val(channel_code);
+//    $("#channel_name").val(channel_name);
+//}
+//
+//
+//var storeJsonChannel;
+//function initChannelSelectcomplate(){
+//    var deptSelect = $("#deptSelect  option:selected").val();
+//    $("#channelSelect").empty();
+//    if(deptSelect==""){
+//        initallchannel();
+//    }else{
+//        //根据事业群查询频道信息
+//        var deptId = "'"+deptSelect+"'";
+//        doManager("chartStatManager","findChannelByDept",[deptId],
+//            function(data,textStatus,XmlHttpRequest){
+//                if (data.result) {
+//                    var jsonData = $.fromJSON(data.data);
+//                    array_channel=new Array();
+//                    var storeString = "";
+//                    $(jsonData).each(function(index,element){
+//                        var channelName = element.name;
+//                        var id = element.id;
+//                        array_channel.push(channelName);
+//                        if(index == 0){
+//                            storeString = "{'"+channelName+"'"+":"+"'"+id+"'"+",";
+//                        }else if(index == jsonData.length-1){
+//                            storeString = storeString+"'"+channelName+"'"+":"+"'"+id+"'"+"}";
+//                        }else{
+//                            storeString = storeString+"'"+channelName+"'"+":"+"'"+id+"'"+",";
+//                        }
+//                    });
+//                    storeJsonChannel=$.fromJSON(storeString);
+//                    $("#channelSelect").append("<option value=''>全部频道</option>");
+//                    $(jsonData).each(function(index,element){
+//                        $("#channelSelect").append('<option value="'+element.id+'">'+element.name+'</option>');
+//                    });
+//                }
+//            });
+//    }
+//
+//}
 
 
 </script>
@@ -457,7 +457,15 @@ function initChannelSelectcomplate(){
                             </td>
                             <td width="35%">
                                 <p class="read">事业群名称：</p>
-                                <p class="read"><select id="deptSelect" style="display: block"  onchange="showDept()"></select><input type="text" style="display: none;background-color: rgb(242, 239, 239);" readonly id="businessGroup_name" name="businessGroup_name"><input type="hidden" id="businessGroup_code" name="businessGroup_code"> </p>
+                                <p class="read"><select id="deptSelect" style="display: block"  onchange="showDept()">
+                                    <option value="">请选择事业群</option>
+                                    <option value="国安优易">国安优易</option>
+                                    <option value="家务事">家务事</option>
+                                    <option value="点位">点位</option>
+                                    <option value="国安金超">国安金超</option>
+                                    <option value="产品中心">产品中心</option>
+                                    <option value="政府补贴">政府补贴</option>
+                                </select><input type="text" style="display: none;background-color: rgb(242, 239, 239);" readonly id="businessGroup_name" name="businessGroup_name"><input type="hidden" id="businessGroup_code" name="businessGroup_code"> </p>
                             </td>
                             <!--<td width="45%" style="display: none">-->
                                 <!--<p class="read">频道名称：</p>-->
