优化目标值功能

--- a/WebContent/crm/target_entry_list_edit.html
+++ b/WebContent/crm/target_entry_list_edit.html
@@ -368,13 +368,13 @@
 			</tr>
 			<tr>
 				<td width="33.33%">
-					<p>事业群毛利指标：<input name="maori_target" id="maori_target" readonly style="width: 38%;color: #333333;border: 0;"></p>
+					<p>事业群毛利指标：<input name="maori_target" id="maori_target" readonly style="font-weight: bold;width: 38%;color: #333333;border: 0;"></p>
 				</td>
 				<td width="33.33%">
-					<p class="read">事业群利润指标：<input name="profit_target" readonly id="profit_target" style="width: 38%;color: #333333;border: 0;"></p>
+					<p class="read">事业群利润指标：<input name="profit_target" readonly id="profit_target" style="font-weight: bold;width: 38%;color: #333333;border: 0;"></p>
 				</td>
 				<td width="33.33%">
-					<p>事业群用户指标：<input name="user_target" id="user_target" readonly style="width: 38%;color: #333333;border: 0;"></p>
+					<p>事业群用户指标：<input name="user_target" id="user_target" readonly style="font-weight: bold;width: 38%;color: #333333;border: 0;"></p>
 				</td>
 
 
